demo/config-management-anthos15/out-of-scope/namespaces/store-out-of-scope/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  hosts:
  - "*"
  gateways:
  - store-out-of-scope/istio-ingressgateway
  http:
  - route:
    - destination:
        host: nginx.store-out-of-scope.svc.cluster.local
        port:
          number: 80
